Fix: add white space to navbar and aligned center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,8 +26,9 @@ html {
 
 .navbar-top {
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 2rem 0;
+  padding: 2rem 5rem;
 }
 
 .navbar-top div {
